update: every swagg doc and optimize book hanlers
